
Release 3-dev
=============

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------

- a new LTE MAC downlink scheduling algorithm named Channel and QoS
  Aware (CQA) Scheduler is provided by the new
  ``ns3::CqaFfMacScheduler`` object.
  

Bugs fixed
----------


Release 3.19
=============

Availability
------------
This release is available from:
http://www.nsnam.org/release/ns-allinone-3.19.tar.bz2

Supported platforms
-------------------
These platforms have been tested; others may work also:
- Fedora Core 20 (32 bit) with g++-4.8.2
- Fedora Core 19 (32/64 bit) with g++-4.8.1
- Ubuntu 13.10 (64 bit) with g++-4.8.1
- Ubuntu 12.04.3 (32/64 bit) with g++-4.6.3
- Ubuntu 10.04.4 LTS (64 bit) with g++-4.4.3
- OS X Mavericks 10.9 with Xcode 5.0.1 and clang-500.2.79
- OS X Mountain Lion 10.8.5 with Xcode 5 and g++-4.2.1
- FreeBSD 9.2-RELEASE (64 bit) with clang-3.3

New user-visible features
-------------------------
- Extension to UE measurements and improved handover algorithm models in LTE
  module, as the outcome of GSoC 2013 project. The project also includes several
  sub-features, such as:
   - implementation of System Information Block Type 1 (SIB1);
   - a new option for automatic UE attachment using Idle mode cell selection
     procedure;
   - improved configurability of UE measurements; and
   - two options of handover algorithms for enabling automatic handover trigger
     in LTE simulation: A2-A4-RSRQ and strongest cell (A3-RSRP).

- A new FixedRoomPositionAllocator has been added to the buildings
  module. It allows one to generate a random position uniformly
  distributed in the volume of a chosen room inside a chosen building.  

- A new attribute ns3::LteRlcAm::TxOpportunityForRetxAlwaysBigEnough
  allows to overcome the lack for re-segmentation in the RLC AM
  implementation by assuming that the size of a TxOpportunity is